# AumigosDeLivrosBot

./: .gitignore  README.md  config_dev.toml  constants.py  main.py  pyproject.toml
app/templates/: index.html
aumigodelivrosbot/plugins/callbacks/: adoption_handler.py  buy_handler.py  donate_handler.py  donate_pix_handler.py  events_handler.py  help_handler.py  menu_handler.py  ong_handler.py  points_handler.py  social_handler.py  team_handler.py  voluntary_handler.py
aumigodelivrosbot/plugins/commands/: adoption_handler.py  buy_handler.py  donate_handler.py  events_handler.py  help_handler.py  menu_handler.py  social_handler.py  start_handler.py  voluntary_handler.py
aumigodelivrosbot/plugins/helpers/: buttons.py  messages.py
aumigodelivrosbot/services/: pix_service.py
docs/: index.html
docs/static/css/: style.css
docs/static/js/: appController.js
